test/fixtures/public/fail/semantic/sameOperation.jmm
/*  REASON:
    Cannot add arrays
*/

class AddArrays {
    public static void main(String[] a) { 
        int[] i;
        int[] b;

        i = a + b;
        i = a*b;
        i = a-b;
        i = a/b;
    }
}
